k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kops-ingress
spec:
  rules:
  - host: kops.k8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kops-ui-svc
          servicePort: 8080
